--- a/polls/templates/polls/new_student_page.html
+++ b/polls/templates/polls/new_student_page.html
@@ -36,28 +36,27 @@ body, html {
 <body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">QUICK TUTOR</a>
-    <!-- Right-sided navbar links -->
-    <div class="w3-right w3-hide-small">
-        {% if user.is_authenticated %}
-            <!-- add drop down -->
-            <div class="w3-dropdown-hover w3-white">
-                <button class="w3-button w3-white">Welcome, {{ user.first_name }}</button>
-                <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
-                    <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
-                </div>
-            </div>
-        {% else %}
-            <a href="{% url 'social:begin' 'google-oauth2' %}" class="w3-bar-item w3-button">LOGIN</a>
-        {% endif %}
-      <a href="/quick-tutor/" class="w3-bar-item w3-button">HOME</a>
-      <a href="/quick-tutor/tutor_match/" class="w3-bar-item w3-button">FIND A TUTOR</a>
-      <a href="https://chat-site6.herokuapp.com/" class="w3-bar-item w3-button">CHAT APP</a>
-      <a href="/quick-tutor/contact_us" class="w3-bar-item w3-button">CONTACT</a>
-
-    </div>
+    <div class="w3-bar w3-white w3-card" id="myNavbar">
+      <a href="/quick-tutor/" class="w3-bar-item w3-button w3-wide">QUICK TUTOR</a>
+      <!-- Right-sided navbar links -->
+      <div class="w3-right w3-hide-small">
+          <a href="/quick-tutor/" class="w3-bar-item w3-button">HOME</a>
+          {% if user.is_authenticated %}
+              <!-- add drop down -->
+              <div class="w3-dropdown-hover w3-white">
+                  <button class="w3-button">Welcome, {{ user.first_name }}</button>
+                  <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+                      <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
+                  </div>
+              </div>
+              <a href="/quick-tutor/tutor_match/" class="w3-bar-item w3-button">FIND A TUTOR</a>
+          {% else %}
+              <a href="{% url 'social:begin' 'google-oauth2' %}" class="w3-bar-item w3-button">LOGIN</a>
+          {% endif %}
+        <a href="https://chat-site6.herokuapp.com/" class="w3-bar-item w3-button">CHAT APP</a>
+  
+      </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -68,24 +67,23 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="/quick-tutor/" class="w3-bar-item w3-button">HOME</a>
-  <a href="/quick-tutor/tutor_match/" onclick="w3_close()" class="w3-bar-item w3-button">FIND A TUTOR</a>
-  <a href="https://chat-site6.herokuapp.com/" onclick="w3_close()" class="w3-bar-item w3-button">CHAT APP</a>
-  <a href="/quick-tutor/contact_us" class="w3-bar-item w3-button">CONTACT</a>
-        {% if user.is_authenticated %}
-            <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
-            <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
-        {% else %}
-            <a href="{% url 'social:begin' 'google-oauth2' %}" class="w3-bar-item w3-button">LOGIN</a>
-        {% endif %}
-</nav>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+    <a href="/quick-tutor/" class="w3-bar-item w3-button">HOME</a>
+    <a href="https://chat-site6.herokuapp.com/" onclick="w3_close()" class="w3-bar-item w3-button">CHAT APP</a>
+          {% if user.is_authenticated %}
+              <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+              <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
+              <a href="/quick-tutor/tutor_match/" onclick="w3_close()" class="w3-bar-item w3-button">FIND A TUTOR</a>
+          {% else %}
+              <a href="{% url 'social:begin' 'google-oauth2' %}" class="w3-bar-item w3-button">LOGIN</a>
+          {% endif %}
+  </nav>
 
 <!-- Tutor Request Cards -->
 
 <div class="w3-container" style="padding:128px 16px" id="tutors">
   <h3 class="w3-center">REQUESTS</h3>
-  <p class="w3-center w3-large">Here the tutors you have requested</p>
+  <p class="w3-center w3-large">Here are the tutors you have requested</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     {% if sr != 0 %}
         {% for t_request in sr %}
@@ -96,6 +94,7 @@ body, html {
                   <p class="w3-opacity "id="skills">Tutor: {{ t_request.tutor.preferred_name }}</p>
                   <p>Venmo: {{ t_request.tutor.venmo }}</p>
                   <p>Request Submitted on: {{t_request.pub_date}}</p>
+                  <p>Status: {{t_request.progress}}</p>
                   <a href="{% url 'quick-tutor:student_cancel' t_request.id%}" class="w3-button w3-lightgray w3-block">Cancel</a>
                 </div>
               </div>
