--- a/polls/templates/polls/confirm_match.html
+++ b/polls/templates/polls/confirm_match.html
@@ -123,6 +123,8 @@
         </div>
       </div>
     </section>
+
+	<iframe src="https://chat-site6.herokuapp.com/"></iframe>
   <!-- ================ End banner Area ================= -->
 
 
