--- a/polls/templates/polls/new_confirm_cancel.html
+++ b/polls/templates/polls/new_confirm_cancel.html
@@ -44,9 +44,22 @@ body, html {
           {% if user.is_authenticated %}
               <!-- add drop down -->
               <div class="w3-dropdown-hover w3-white">
-                  <button class="w3-button">Welcome, {{ user.first_name }}</button>
+                  <button class="w3-button">
+                      <span>Welcome, {{ user.first_name }} </span>
+                      {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                        <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+
+                      {% else %}
+                      {% endif %}
+                  </button>
                   <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">
+                          <span>MY PROFILE </span>
+                            {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                            <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+                            {% else %}
+                            {% endif %}
+                      </a>
                       <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
                   </div>
               </div>
@@ -87,8 +100,9 @@ body, html {
     <div class="w3-display-left w3-text-white" style="padding:48px">
         <span class="w3-jumbo w3-hide-small">Success!</span><br>
         <span class="w3-xxlarge w3-hide-large w3-hide-medium">Success!</span><br>
-        <span class="w3-large">Your request has been Canceled</span>
-        <p><a href="/quick-tutor/" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Home</a></p>
+        <span class="w3-large">Your request has been canceled</span>
+        <p><a href="/quick-tutor/" class="w3-button w3-blue w3-padding-large w3-large w3-margin-top">Home</a>
+        <a href="/quick-tutor/student_profile" class = "w3-button w3-blue w3-padding-large w3-large w3-margin-top">Back to my profile</a></p>
     </div>
 </div>
 
