--- a/polls/templates/polls/new_student_page.html
+++ b/polls/templates/polls/new_student_page.html
@@ -44,9 +44,22 @@ body, html {
           {% if user.is_authenticated %}
               <!-- add drop down -->
               <div class="w3-dropdown-hover w3-white">
-                  <button class="w3-button">Welcome, {{ user.first_name }}</button>
+                  <button class="w3-button">
+                      <span>Welcome, {{ user.first_name }} </span>
+                      {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                        <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+
+                      {% else %}
+                      {% endif %}
+                  </button>
                   <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">
+                          <span>MY PROFILE </span>
+                            {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                            <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+                            {% else %}
+                            {% endif %}
+                      </a>
                       <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
                   </div>
               </div>
@@ -83,19 +96,24 @@ body, html {
 
 <div class="w3-container" style="padding:128px 16px" id="tutors">
   <h3 class="w3-center">REQUESTS</h3>
-  <p class="w3-center w3-large">Here are the tutors you have requested</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-    {% if sr != 0 %}
-        {% for t_request in sr %}
-            <div class="w3-col l3 m6 w3-margin-bottom">
+  <p class="w3-center w3-large">Here are the tutors you have requested. Request that require no action will be deleted once you refresh</p>
+    <p class = "w3-center w3-large">You have {{ notifs }} updates to your requests</p>
+  <div class="w3-row-padding" style="margin-top:64px">
+    {% if requests != null %}
+        {% for t_request in requests %}
+            <div class="w3-col l5 m3 w3-margin-bottom w3-margin-left">
               <div class="w3-card">
                 <div class="w3-container">
                   <h3>Subject: {{ t_request.subject }}</h3>
                   <p class="w3-opacity "id="skills">Tutor: {{ t_request.tutor.preferred_name }}</p>
                   <p>Venmo: {{ t_request.tutor.venmo }}</p>
-                  <p>Request Submitted on: {{t_request.pub_date}}</p>
-                  <p>Status: {{t_request.progress}}</p>
-                  <a href="{% url 'quick-tutor:student_cancel' t_request.id%}" class="w3-button w3-lightgray w3-block">Cancel</a>
+                  <p>Las Modified: {{t_request.modified_date}}</p>
+                  <p>Status: {{t_request.get_progress_display}}</p>
+                  {% if t_request.progress == 1 %}
+                  <p><a href="{% url 'quick-tutor:student_cancel' t_request.id%}" class="w3-button w3-red w3-block">Cancel</a></p>
+                    {% elif t_request.progress == 2 or t_request.progress == 4 or t_request.progress == 5 %}
+                    <p><a href="{% url 'quick-tutor:archive_request_student' t_request.id %}" class = "w3-button w3-grey w3-block">Archive</a></p>
+                    {% endif %}
                 </div>
               </div>
             </div>
