--- a/polls/templates/polls/new_profile.html
+++ b/polls/templates/polls/new_profile.html
@@ -44,9 +44,22 @@ body, html {
           {% if user.is_authenticated %}
               <!-- add drop down -->
               <div class="w3-dropdown-hover w3-white">
-                  <button class="w3-button">Welcome, {{ user.first_name }}</button>
+                  <button class="w3-button">
+                      <span>Welcome, {{ user.first_name }} </span>
+                      {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                        <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+
+                      {% else %}
+                      {% endif %}
+                  </button>
                   <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">
+                          <span>MY PROFILE </span>
+                            {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                            <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+                            {% else %}
+                            {% endif %}
+                      </a>
                       <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
                   </div>
               </div>
@@ -83,34 +96,60 @@ body, html {
 
 <!-- Profile Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-  <h3 class="w3-center">YOUR PROFILE</h3>
-  <p class="w3-center w3-large">Here is your profile information</p>
-   <div class="w3-col m6 w3-left" style="margin-top:10px">
-       <div class="w3-content" style="padding-left:300px">
-           <p class="w3-wide"><b>Name:</b>{{user.first_name}} {{user.last_name}}</p>
-           <p class="w3-wide"><b>Preferred Name</b>:{{user.profile.preferred_name}}</p>
-           <p class="w3-wide"><b>Year:</b>{{user.profile.student_year_in_school}}</p>
-           <p class="w3-wide"><b>Academic Focuses:</b>{{user.profile.need_help_with}}</p>
-           <p class="w3-wide"><b>Location:</b>{{user.profile.location}}</p>
-           <p class="w3-wide"><b>Availability:</b>{{user.profile.availability}}</p>
-           <p class="w3-wide"><b>Venmo:</b>{{user.profile.venmo}}</p>
-           {% if user.profile.student_tutor %}
-           <p class="w3-wide"><b>Are you a tutor:</b>Yes</p>
-           <p class="w3-wide"><b>Skills:</b> {{user.profile.skills}}</p>
-           {% else %}
-           {% endif %}
-           <a href="/quick-tutor/student_profile/edit/" class="w3-button w3-black w3-margin-top">Edit Information</a>
-       </div>
-   </div>
-    <div class="w3-col m6 w3-right">
-        <p><a href="/quick-tutor/student_requests/" class="w3-button w3-black w3-margin-top">My Requests</a></p>
-        {% if user.profile.student_tutor %}
-        <p><a href="/quick-tutor/tutor_requests" class="w3-button w3-black w3-margin-top">See Who Requested Me</a></p>
-        {% else %}
-        {% endif %}
+    <h3 class="w3-center">YOUR PROFILE</h3>
+    <p class="w3-center w3-large">Here is your profile information</p>
+    <div class = "w3-row-padding">
+        <div class="w3-half">
+            <div class="w3-card w3-margin-top w3-center" style="box-shadow: 0 0 0 0">
+                <div class="w3-container" style="padding:20px 20px 20px 20px">
+                    {% if user.profile.student_tutor %}
+                        {% if user.profile.available %}
+                            <p><a href="{% url 'quick-tutor:become_available' %}" class = "w3-button w3-red">STOP ACCEPTING REQUESTS</a></p>
+                            {% else %}
+                            <a href="{% url 'quick-tutor:become_available' %}" class = "w3-button w3-green">START ACCEPTING REQUESTS</a>
+                        {% endif %}
+                        {% else %}
+                    {% endif %}
+                       <p><a href="/quick-tutor/student_profile/edit/" class="w3-button w3-black">Edit Information</a></p>
+                    {% if user.profile.student_notifications == 0 %}
+                        <p><a href="/quick-tutor/student_requests/" class="w3-button w3-black">My Requests</a></p>
+                        {% else %}
+                        <p><a href = "/quick-tutor/student_requests/" class ="w3-button w3-black">
+                            <span>My Requests</span>
+                            <span class = "w3-badge w3-blue">{{user.profile.student_notifications}}</span>
+                        </a></p>
+                    {% endif %}
+                    {% if user.profile.student_tutor %}
+                        {% if user.profile.tutor_notifications == 0 %}
+
+                        <p><a href="/quick-tutor/tutor_requests/" class="w3-button w3-black">See Who Requested Me</a></p>
+                        {% else %}
+                        <p><a href = "/quick-tutor/tutor_requests/" class = "w3-button w3-black">
+                            <span>See who requested me</span>
+                            <span class = "w3-badge w3-blue"> {{user.profile.tutor_notifications}}</span>
+                        </a></p>
+                        {% endif %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+            <div class = "w3-half">
+                <div class="w3-card" style="box-shadow:0 0 0 0">
+                    <div class="w3-container">
+                       <p class="w3-wide"><b>Name:</b>{{user.first_name}} {{user.last_name}}</p>
+                       <p class="w3-wide"><b>Preferred Name</b>:{{user.profile.preferred_name}}</p>
+                       <p class="w3-wide"><b>Year:</b>{{user.profile.student_year_in_school}}</p>
+                       <p class="w3-wide"><b>Location:</b>{{user.profile.location}}</p>
+                       <p class="w3-wide"><b>Venmo:</b>{{user.profile.venmo}}</p>
+                       <p class="w3-wide"><b>Bio:</b> {{user.profile.bio}}</p>
+                       {% if user.profile.student_tutor %}
+                       <p class="w3-wide"><b>Are you a tutor:</b>Yes</p>
+                       {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
