--- a/polls/templates/polls/new_tutor_match.html
+++ b/polls/templates/polls/new_tutor_match.html
@@ -44,9 +44,22 @@ body, html {
           {% if user.is_authenticated %}
               <!-- add drop down -->
               <div class="w3-dropdown-hover w3-white">
-                  <button class="w3-button">Welcome, {{ user.first_name }}</button>
+                  <button class="w3-button">
+                      <span>Welcome, {{ user.first_name }} </span>
+                      {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                        <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+
+                      {% else %}
+                      {% endif %}
+                  </button>
                   <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">
+                          <span>MY PROFILE </span>
+                            {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                            <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+                            {% else %}
+                            {% endif %}
+                      </a>
                       <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
                   </div>
               </div>
@@ -84,18 +97,18 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="tutors">
   <h3 class="w3-center">AVAILABLE TUTORS</h3>
   <p class="w3-center w3-large">Here are the tutors who are currently available</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+  <div class="w3-row-padding" style="margin-top:64px">
 
     {% if student_list %}
         {% for student in student_list %}
-            {% if student.student_tutor %}
-                <div class="w3-col l3 m6 w3-margin-bottom">
+            {% if student.student_tutor and student.id != user.profile.id%}
+                <div class="w3-col l5 m3 m6 w3-margin-bottom">
                   <div class="w3-card">
                     <div class="w3-container">
                       <h3>{{student.preferred_name }}</h3>
-                      <p class="w3-opacity "id="skills">{{student.skills}}</p>
-                      <p id="loc">{{ student.location }}</p>
-                      <p><a href="{% url 'quick-tutor:additional_info' student.id %}" class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> REQUEST </a></p>
+                      <p class="w3-opacity "id="skills">{{student.student_year_in_school}}</p>
+                      <p id="loc">{{ student.bio }}</p>
+                      <p><a href="{% url 'quick-tutor:additional_info' student.id %}" class="w3-button w3-green w3-block"><i class="fa fa-envelope"></i> REQUEST </a></p>
                     </div>
                   </div>
                 </div>
