--- a/polls/templates/polls/new_tutor_page.html
+++ b/polls/templates/polls/new_tutor_page.html
@@ -44,9 +44,22 @@ body, html {
           {% if user.is_authenticated %}
               <!-- add drop down -->
               <div class="w3-dropdown-hover w3-white">
-                  <button class="w3-button">Welcome, {{ user.first_name }}</button>
+                  <button class="w3-button">
+                      <span>Welcome, {{ user.first_name }} </span>
+                      {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                        <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+
+                      {% else %}
+                      {% endif %}
+                  </button>
                   <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
+                      <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">
+                          <span>MY PROFILE </span>
+                            {% if user.profile.student_notifications > 0 or user.profile.tutor_notifications > 0 %}
+                            <span class = "w3-badge w3-blue"><i class="fa fa-bell" style="font-size:12px"></i></span>
+                            {% else %}
+                            {% endif %}
+                      </a>
                       <a href="{% url 'logout' %}" class = "w3-bar-item w3-button">LOGOUT</a>
                   </div>
               </div>
@@ -83,32 +96,35 @@ body, html {
 
 <div class="w3-container" style="padding:128px 16px" id="tutors">
   <h3 class="w3-center">REQUESTS</h3>
-  <p class="w3-center w3-large">Here's who has requested you to tutor</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-    {% if tr != 0 %}
-        {% for s_request in tr %}
+  <p class="w3-center w3-large">Here's who has requested you to tutor. Requests that require no action will be deleted once you refresh </p>
+  <p class = "w3-center w3-large">You have {{ notifs }} updates to existing requests and/or new requests</p>
+  <div class="w3-row-padding" style="margin-top:64px">
+    {% if requests != null %}
+        {% for s_request in requests %}
             <div class="w3-col l3 m6 w3-margin-bottom">
               <div class="w3-card">
                 <div class="w3-container">
                   <h3>{{ s_request.student.preferred_name }}</h3>
-                  <p class="w3-opacity "id="skills">Contact: {{ s_request.contact_info }}</p>
+                  <p class="w3-opacity">Contact: {{ s_request.contact_info }}</p>
+                  <p class ="w3-opacity">Location: {{s_request.location}}</p>
                   <p>Subject: {{ s_request.subject }}</p>
                   <p>{{s_request.subject_text}}</p>
-                  <p>Status: {{s_request.progress}}</p>
-                  <form action="{% url 'quick-tutor:tutor_update_request' s_request.id%}" method = "POST">
-                      {% csrf_token %}
-                    <label for = "accept_request">ACCEPT</label>
-                      <input type="radio" class="w3-button w3-lightgrey w3-block" name="request_status" id="accept_request" value = "Accepted"><br>
-                    <label for="deny_request">DECLINE</label>
-                      <input type = "radio" class= "w3-button w3-lightgrey w3-block" id = "deny_request" name = "request_status" value = "Declined"><br>
-                    <p><input type="submit" class="w3-button w3-lightgrey w3-block"> </input></p>
-                  </form>
+                  <p>Status: {{s_request.get_progress_display}}</p>
+                  {% if s_request.progress == 1 %}
+                    <a href = "{% url 'quick-tutor:tutor_accept' s_request.id %}" class = "w3-button w3-green w3-margin-left">Accept</a>
+                    <a href = "{% url 'quick-tutor:tutor_decline' s_request.id %}" class = "w3-button w3-red w3-margin-right">Decline</a>
+                  {% elif s_request.progress == 3 %}
+                    <a href = "{% url 'quick-tutor:tutor_complete' s_request.id %}" class = "w3-button w3-center w3-blue ">Complete</a>
+                    {% else %}
+                    <a href="{% url 'quick-tutor:archive_request_tutor' s_request.id %}" class = "w3-button w3-center w3-grey">Archive</a>
+                    {% endif %}
+                    <p class = "w3-opacity">Last modified: {{s_request.modified_date}}</p>
                 </div>
               </div>
             </div>
         {% endfor %}
       {% else %}
-      <p class="w3-large">Sorry, no tutors are available at this time</p>
+      <p class="w3-large">You  have no requests at the moment</p>
       <a class="w3-large w3-button w3-black" href="/quick-tutor/">HOME</a>
       {% endif %}
   </div>
