--- a/polls/templates/polls/new_edit_profile.html
+++ b/polls/templates/polls/new_edit_profile.html
@@ -96,13 +96,16 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="edit">
   <h3 class="w3-center">Profile</h3>
   <p class="w3-center w3-large">Add to or update your profile</p>
-  <div class= "w3 center" style="margin-top:48px">
-      <form action="" method="POST">
-          {% csrf_token %}
-          {{ profile_form.as_p }}
-          <input type="submit" class="w3-button w3-black">
-      </form>
-  </div>
+        <div class = "w3-container" style="padding:16px 0px 0px 350px">
+            <div class="w3-panel">
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    {{ profile_form.as_p }}<br>
+                <input type="submit" class="w3-button w3-black">
+                </form>
+            </div>
+        </div>
+
 </div>
 
 <!-- Footer -->
